# introcs-py

./: .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  dev.sh  docker-compose.yml  pyproject.toml  tox.ini
introcs/ch1/: binary.py  couponcollector.py  divisorpattern.py  factors.py  flip.py  floatops.py  gambler.py  harmonic.py  helloworld.py  intops.py  leapyear.py  powersoftwo.py  primesieve.py  quadratic.py  randomseq.py  ruler.py  sample.py  selfavoid.py  sqrt.py  tenhellos.py  useargument.py
introcs/ch1/exp_q/: 1_2_14.py  1_2_16.py  1_2_18.py  1_2_20.py  1_2_22.py  1_2_24.py  1_2_26.py  1_2_28.py  1_2_29.py  1_2_30.py  1_2_31.py  1_2_32.py
introcs/ch1/exp_q/2/: 1_2_15.py  1_2_19.py  1_2_2.py  1_2_21.py  1_2_22.py  1_2_23.py  1_2_25.py  1_2_27.py  1_2_28.py  1_2_3.py  1_2_30.py  1_2_4.py
introcs/ch1/exp_q/3/: 1_3_1.py  1_3_13.py  1_3_2.py  1_3_6.py  fiveperline.py  functiongrowth.py  stats.py
introcs/stdlib/: color.py  instream.py  picture.py  stdarray.py  stdaudio.py  stddraw.py  stdio.py  stdrandom.py  stdstats.py
stdlib/: color.py  instream.py  outstream.py  picture.py  stdarray.py  stdaudio.py  stddraw.py  stdio.py  stdrandom.py  stdstats.py
