[tool.poetry]
name = "introcs-py"
version = "0.1.0"
description = "Python modules to support the book \"Introduction to Programming in Python\"."
authors = ["Thomas Sungjin Kang <ujuc@ujuc.kr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
