[tool.poetry]
name = "introcs-py"
version = "0.1.0"
description = "Python modules to support the book \"Introduction to Programming in Python\"."
authors = ["Thomas Sungjin Kang <ujuc@ujuc.kr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
tox = "^3.14.3"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
flake8-docstrings = "^1.5.0"
mypy = "^0.761"
black = "^19.10b0"
pylint = "^2.4.4"

[tool.black]
line-lenght = 80
target-version = ['py37', 'py38']
skip-string-normalization = true

[tool.pytest]
testpath = 'unit_tests'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
